Update meta descriptions

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Kansalaisnoppia</title>
   <meta name="author" content="AYY & HYY & ISYY & TREY">
-  <meta name="description" content="description here">
-  <meta name="keywords" content="">
+  <meta name="description" content="10 askelta yhteiskunnallisesti aktiivisten opiskelijoiden kasvattamiseen">
+  <meta name="keywords" content="Kansalaisaktiivisuus,noppia,opintopisteitä,kansalaistoiminta">
   <link rel="shortcut icon" href="favicon.png" type="image/png">
   <style type="text/css">
     @font-face {
