--- a/index.html
+++ b/index.html
@@ -4,149 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Kansalaisnoppia</title>
-  <meta name="author" content="AYY & HYY & ISYY & TREY">
-  <meta name="description" content="10 askelta yhteiskunnallisesti aktiivisten opiskelijoiden kasvattamiseen">
-  <meta name="keywords" content="Kansalaisaktiivisuus,noppia,opintopisteitä,kansalaistoiminta">
-  <link rel="shortcut icon" href="favicon.png" type="image/png">
-  <style type="text/css">
-    @font-face {
-      font-family: 'Bosk';
-      src: url('Bosk.woff2');
-    }
-    @font-face {
-      font-family: 'ViceCitySans';
-      src: url('ViceCitySans.woff2');
-    }
-    html {
-      --YELLOW: #F7C45F;
-      --YELLOW-MEDIUM: #EBD2C6;
-      --YELLOW-FAINT: #F5E8E4;
-      --BLACK: #26364A;
-      --RED: #D9505E;
-      font-size: calc(12px + (16 - 12) * ((100vw - 320px) / (1080 - 320)));
-      box-sizing: border-box;
-      height: 100vh;
-    }
-    body {
-      background-color: var(--YELLOW-FAINT);
-      color: var(--BLACK);
-      font-family: 'ViceCitySans';
-      margin: 0;
-      padding: 2rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      overflow-y: auto;
-      min-height: calc(100% - 4rem);
-    }
-    main {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
-      grid-column-gap: 4rem;
-      max-width: 88rem;
-      margin: auto;
-    }
-    h1 {
-      margin: 0;
-    }
-    h2 {
-      margin-top: 0;
-    }
-
-    ol {
-      list-style: none;
-      padding-left: 0;
-    }
-    ol.first {
-      counter-reset: numbering;
-    }
-    ol.second {
-      counter-reset: numbering 4;
-    }
-    ol.third {
-      counter-reset: numbering 8;
-    }
-    ol li {
-      counter-increment: numbering;
-      display: flex;
-      padding-bottom: 1rem;
-    }
-    ol li::before {
-      content: counter(numbering) ". ";
-      color: var(--YELLOW);
-      font-family: 'Bosk';
-      font-size: 2rem;
-      padding-right: 1rem;
-      min-width: 2rem;
-    }
-
-    .title {
-      font-size: 2rem;
-      display: flex;
-      align-items: center;
-    }
-    .header {
-      padding-bottom: 1.5rem;
-    }
-    .number {
-      font-family: 'Bosk';
-      color: var(--YELLOW);
-    }
-    .number-title {
-      font-size: 5rem;
-      padding-right: 1rem;
-    }
-    .recommendations {
-      font-family: 'Bosk';
-      color: var(--RED);
-      text-align: right;
-      display: block;
-      padding: 0.3rem 0.5rem 0.5rem;
-    }
-    .list-title {
-      font-family: 'Bosk';
-    }
-
-    .footer {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: center
-
-    }
-    .logo {
-      max-width: 8rem;
-      padding: 0 1rem;
-      width: 100%;
-    }
-    .die {
-      position: absolute;
-      width: 5rem;
-      z-index: -1;
-    }
-    .die1 {
-      top: 10%;
-      left: 7%;
-    }
-    .die2 {
-      right: 8%;
-      bottom: 15%;
-      transform: rotate(20deg);
-    }
-    .die3 {
-      top: 35%;
-      right: 45%;
-      transform: rotate(-40deg);
-    }
-    .die4 {
-      bottom: 30%;
-      left: 30%;
-      transform: rotate(30deg);
-    }
-  </style>
+    <meta name="author" content="AYY & HYY & ISYY & TREY">
+    <meta name="description" content="10 askelta yhteiskunnallisesti aktiivisten opiskelijoiden kasvattamiseen">
+    <meta name="keywords" content="Kansalaisaktiivisuus,noppia,opintopisteitä,kansalaistoiminta">
+    <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="favicon.png" type="image/png">
   </head>
   <body>
-    <section>
+    <section class="content">
       <main>
         <div class="half">
          <header class="header">
