--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fi">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -14,38 +14,40 @@
     <section class="content">
       <main>
         <div class="half">
-         <header class="header">
-           <h1 class="title">
-             <span class="number number-title">10</span>
-             <span>askelta yhteiskunnallisesti aktiivisten opiskelijoiden kasvattamiseen</span>
-           </h1>
-           <span class="title recommendations">Suositukset korkeakouluille</span>
-         </header>
-         <section class="why">
-           <h2 class="list-title">Miksi tunnustaa aktiivinen kansalaistoiminta osaksi opintoja?</h2>
-           <ol class="point-list first">
-             <li class="list-item">
-               Korkeakoulu on alusta, joka mahdollistaa aktiivisena opiskelijana ja kansalaisena toimimisen.
-               Oikeanlaisella kannustuksella opiskelijat voivat vaikuttaa asuin-, elin- ja opiskeluympäristöönsä
-               esimerkiksi järjestö-, opiskelijaedustaja- ja vapaaehtoistoiminnan kautta tai vaikkapa kunnanvaltuutettuna.
-             </li>
-             <li class="list-item">
-               Opiskelijoita on paljon, ja he muodostavat merkittävän osan korkeakoulun yhteiskunnallisesta
-               vuorovaikutuksesta. Kasvattamalla aktiivisia opiskelijoita myös koulutuksen vaikuttavuus yhteiskunnassa kasvaa!
-             </li>
-             <li class="list-item">
-               Korkeakoulujen kannattaa palkita opiskelijoita aktiivisesta kansalaisuudesta tunnustamalla syntyvä osaaminen
-               opintopisteiden muodossa, sillä tunnustus luo opiskelijoille kokemuksen siitä, että heidän tekemisellään
-               yhteiskunnassa ja yliopistoyhteisössä on merkitystä.
-             </li>
-             <li class="list-item">
-               Kansalaistoiminta mahdollistaa kohtaamisia ja luo yhteisöllisyyttä. Yliopiston piirissä toimivat
-               opiskelija-aktiivit integroituvat hyvin yliopistoyhteisöön, mikä tukee opiskelua ja hyvinvointia.
-               Opiskelijan verkostoituminen yliopistoyhteisön ulkopuolella taas edesauttaa työllistymistä ja
-               monipuolistaa maailmankuvaa.
-             </li>
-           </ol>
-         </section>
+          <a class="lang-link" href="/en">In english</a>
+          <a class="lang-link" href="/se">På svenska</a>
+          <header class="header">
+            <h1 class="title">
+              <span class="number number-title">10</span>
+              <span>askelta yhteiskunnallisesti aktiivisten opiskelijoiden kasvattamiseen</span>
+            </h1>
+            <span class="title recommendations">Suositukset korkeakouluille</span>
+          </header>
+          <section class="why">
+            <h2 class="list-title">Miksi tunnustaa aktiivinen kansalaistoiminta osaksi opintoja?</h2>
+            <ol class="point-list first">
+              <li class="list-item">
+                Korkeakoulu on alusta, joka mahdollistaa aktiivisena opiskelijana ja kansalaisena toimimisen.
+                Oikeanlaisella kannustuksella opiskelijat voivat vaikuttaa asuin-, elin- ja opiskeluympäristöönsä
+                esimerkiksi järjestö-, opiskelijaedustaja- ja vapaaehtoistoiminnan kautta tai vaikkapa kunnanvaltuutettuna.
+              </li>
+              <li class="list-item">
+                Opiskelijoita on paljon, ja he muodostavat merkittävän osan korkeakoulun yhteiskunnallisesta
+                vuorovaikutuksesta. Kasvattamalla aktiivisia opiskelijoita myös koulutuksen vaikuttavuus yhteiskunnassa kasvaa!
+              </li>
+              <li class="list-item">
+                Korkeakoulujen kannattaa palkita opiskelijoita aktiivisesta kansalaisuudesta tunnustamalla syntyvä osaaminen
+                opintopisteiden muodossa, sillä tunnustus luo opiskelijoille kokemuksen siitä, että heidän tekemisellään
+                yhteiskunnassa ja yliopistoyhteisössä on merkitystä.
+              </li>
+              <li class="list-item">
+                Kansalaistoiminta mahdollistaa kohtaamisia ja luo yhteisöllisyyttä. Yliopiston piirissä toimivat
+                opiskelija-aktiivit integroituvat hyvin yliopistoyhteisöön, mikä tukee opiskelua ja hyvinvointia.
+                Opiskelijan verkostoituminen yliopistoyhteisön ulkopuolella taas edesauttaa työllistymistä ja
+                monipuolistaa maailmankuvaa.
+              </li>
+            </ol>
+          </section>
         </div>
         <div class="half">
           <section class="how-practical">
