Improve a11y of images

--- a/index.html
+++ b/index.html
@@ -95,22 +95,22 @@
       </main>
       <footer class="footer">
         <a class="logo-link" href="https://hyy.helsinki.fi/fi">
-          <img class="logo" src="hyy_logo.png" />
+          <img class="logo" src="hyy_logo.png" alt="HYY logo" />
         </a>
         <a class="logo-link" href="https://trey.fi/">
-          <img class="logo" src="trey_logo.svg" />
+          <img class="logo" src="trey_logo.svg" alt="TREY logo" />
         </a>
         <a class="logo-link" href="https://www.isyy.fi/">
-          <img class="logo" src="isyy_logo.png" />
+          <img class="logo" src="isyy_logo.png" alt="ISYY logo" />
         </a>
         <a class="logo-link" href="https://ayy.fi/">
-          <img class="logo" src="ayy_logo.svg" />
+          <img class="logo" src="ayy_logo.svg" alt="AYY logo" />
         </a>
       </footer>
     </section>
-    <img src="noppa.svg" class="die die1" />
-    <img src="noppa.svg" class="die die2" />
-    <img src="noppa.svg" class="die die3" />
-    <img src="noppa.svg" class="die die4" />
+    <img src="noppa.svg" class="die die1" alt="" />
+    <img src="noppa.svg" class="die die2" alt="" />
+    <img src="noppa.svg" class="die die3" alt="" />
+    <img src="noppa.svg" class="die die4" alt="" />
   </body>
 </html>
