Update english meta tags

--- a/en/index.html
+++ b/en/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Credits for civic activities</title>
     <meta name="author" content="AYY & HYY & ISYY & TREY">
-    <meta name="description" content="10 askelta yhteiskunnallisesti aktiivisten opiskelijoiden kasvattamiseen">
-    <meta name="keywords" content="Kansalaisaktiivisuus,noppia,opintopisteitä,kansalaistoiminta">
+    <meta name="description" content="10 steps to educate students to be (societally) active">
+    <meta name="keywords" content="Civic activities,study credits,university">
     <link rel="stylesheet" href="/style.css">
     <link rel="shortcut icon" href="favicon.png" type="image/png">
   </head>
