Fix relative asset links to absolute paths

--- a/en/index.html
+++ b/en/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="10 steps to educate students to be (societally) active">
     <meta name="keywords" content="Civic activities,study credits,university">
     <link rel="stylesheet" href="/style.css">
-    <link rel="shortcut icon" href="favicon.png" type="image/png">
+    <link rel="shortcut icon" href="/favicon.png" type="image/png">
   </head>
   <body>
     <section class="content">
@@ -99,22 +99,22 @@
       </main>
       <footer class="footer">
         <a class="logo-link" href="https://hyy.helsinki.fi/fi">
-          <img class="logo" src="hyy_logo.png" alt="HYY logo" />
+          <img class="logo" src="/hyy_logo.png" alt="HYY logo" />
         </a>
         <a class="logo-link" href="https://trey.fi/">
-          <img class="logo" src="trey_logo.svg" alt="TREY logo" />
+          <img class="logo" src="/trey_logo.svg" alt="TREY logo" />
         </a>
         <a class="logo-link" href="https://www.isyy.fi/">
-          <img class="logo" src="isyy_logo.png" alt="ISYY logo" />
+          <img class="logo" src="/isyy_logo.png" alt="ISYY logo" />
         </a>
         <a class="logo-link" href="https://ayy.fi/">
-          <img class="logo" src="ayy_logo.svg" alt="AYY logo" />
+          <img class="logo" src="/ayy_logo.svg" alt="AYY logo" />
         </a>
       </footer>
     </section>
-    <img src="noppa.svg" class="die die1" alt="" />
-    <img src="noppa.svg" class="die die2" alt="" />
-    <img src="noppa.svg" class="die die3" alt="" />
-    <img src="noppa.svg" class="die die4" alt="" />
+    <img src="/noppa.svg" class="die die1" alt="" />
+    <img src="/noppa.svg" class="die die2" alt="" />
+    <img src="/noppa.svg" class="die die3" alt="" />
+    <img src="/noppa.svg" class="die die4" alt="" />
   </body>
 </html>
