--- a/en/index.html
+++ b/en/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Credits for civic activities</title>
+    <title>Kansalaisnoppia</title>
     <meta name="author" content="AYY & HYY & ISYY & TREY">
     <meta name="description" content="10 steps to educate students to be (societally) active">
     <meta name="keywords" content="Civic activities,study credits,university">
